data/derived/comb/progs/unify/prog1893.ml.out
Characters 110-130:
  | (h1, h2) -> removeZero (((h1 + h2) / 10 )::(( h1 + h2) mod 10 ))::a
                                               ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
